SUBDIRS = include/kopano python

EXTRA_DIST = edkmdb.i mapi.i mapiutil.i mapidefs.i mapicode.i mapix.i	\
	mapinotifsink.i typemap.i helpers.i IECExportChanges.i				\
	IECMultiStoreTable.i IECServiceAdmin.i IECSpooler.i					\
	IECTestProtocol.i IECLicense.i inetmapi.i icalmapi.i				\
	swig_iunknown.h ecdefs.i libcommon.i archiver.i licenseclient.i		\
	libfreebusy.i kopanosync.i ECLogger.i RecurrenceState.i				\
	RecurrenceState.swig.h
