SUBDIRS = include/kopano python

EXTRA_DIST = edkmdb.i mapi.i mapiutil.i mapidefs.i mapicode.i mapix.i	\
	mapinotifsink.i helpers.i IECExportChanges.i \
	IECMultiStoreTable.i IECServiceAdmin.i IECSpooler.i					\
	IECTestProtocol.i inetmapi.i icalmapi.i	ecdefs.i archiver.i \
	libfreebusy.i ECLogger.i RecurrenceState.i \
	RecurrenceState.swig.h
