# -*- Makefile -*-

SUBDIRS = python

EXTRA_DIST = edkmdb.i mapi.i mapiutil.i mapidefs.i mapicode.i mapix.i	\
	mapinotifsink.i helpers.i IECExportChanges.i \
	IECServiceAdmin.i IECSpooler.i					\
	IECTestProtocol.i inetmapi.i icalmapi.i	ecdefs.i archiver.i \
	libfreebusy.i RecurrenceState.i RecurrenceState.swig.h
noinst_HEADERS = include/kopano/swig_iunknown.h include/kopano/typemap.i
